[gd_scene load_steps=55 format=3 uid="uid://cvloyxg0g0o58"]

[ext_resource type="PackedScene" uid="uid://cluomdr4nxc7v" path="res://batter_3d.tscn" id="1_f3rg8"]
[ext_resource type="Script" path="res://field_3d.gd" id="1_pctx6"]
[ext_resource type="PackedScene" uid="uid://c7xao527v2us8" path="res://pitcher_3d.tscn" id="2_57wgl"]
[ext_resource type="PackedScene" uid="uid://dmcetu0b5itrl" path="res://wall.tscn" id="2_hfxba"]
[ext_resource type="PackedScene" uid="uid://d3vo8o7aa5kqp" path="res://fielder_3d.tscn" id="4_386e5"]
[ext_resource type="PackedScene" uid="uid://5wu7ixh2ku7q" path="res://catchers_mitt.tscn" id="5_kcgmt"]
[ext_resource type="PackedScene" uid="uid://c6yokfan7mlg7" path="res://bat_3d.tscn" id="6_i5fsa"]
[ext_resource type="PackedScene" uid="uid://cpobb8pjdcvp4" path="res://runner_3d.tscn" id="8_eblru"]
[ext_resource type="PackedScene" uid="uid://bph0v6lfhfc07" path="res://camera_3d_custom.tscn" id="9_hy03x"]
[ext_resource type="Environment" uid="uid://dc33a2etlsbtn" path="res://camera_3d_custom_environment.tres" id="10_t8ph7"]
[ext_resource type="PackedScene" uid="uid://dsb1e4kc4120x" path="res://ball_3d.tscn" id="11_faris"]
[ext_resource type="PackedScene" uid="uid://c8pe2ur7pkpbb" path="res://mouse_ground_location.tscn" id="12_ah4ma"]
[ext_resource type="PackedScene" uid="uid://b7sdkylsmikjw" path="res://mesh_instance_3d_annulus.tscn" id="13_rbd7b"]
[ext_resource type="Script" path="res://flash_text.gd" id="14_g2qjr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yxhqg"]
size = Vector3(60, 2, 60)

[sub_resource type="Gradient" id="Gradient_8rhyr"]
offsets = PackedFloat32Array(0, 0.52381, 1)
colors = PackedColorArray(0, 0.768935, 0, 1, 0, 0.90773, 0, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gcaba"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s72fw"]
width = 1024
height = 1024
color_ramp = SubResource("Gradient_8rhyr")
noise = SubResource("FastNoiseLite_gcaba")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tww2n"]
albedo_color = Color(0.0980392, 0.533333, 0.0862745, 1)
albedo_texture = SubResource("NoiseTexture2D_s72fw")
subsurf_scatter_strength = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_i5ps3"]
material = SubResource("StandardMaterial3D_tww2n")
size = Vector3(300, 2, 300)

[sub_resource type="BoxMesh" id="BoxMesh_s3y8d"]
size = Vector3(0.35, 0.01, 0.35)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6mnrb"]

[sub_resource type="BoxMesh" id="BoxMesh_ehdc6"]
material = SubResource("StandardMaterial3D_6mnrb")
size = Vector3(0.5, 0.01, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4cn5"]
albedo_color = Color(0.27451, 0, 0.529412, 1)

[sub_resource type="BoxMesh" id="BoxMesh_j3njs"]
material = SubResource("StandardMaterial3D_t4cn5")
size = Vector3(50, 15, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ql0xs"]

[sub_resource type="QuadMesh" id="QuadMesh_m8866"]
material = SubResource("StandardMaterial3D_ql0xs")
size = Vector2(0.06, 100)
center_offset = Vector3(0.03, 0.002, 51.5)
orientation = 1

[sub_resource type="QuadMesh" id="QuadMesh_mt18i"]
size = Vector2(100, 0.06)
center_offset = Vector3(51.5, 0.002, 0)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7incl"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_rjcmf"]
material = SubResource("StandardMaterial3D_7incl")
top_radius = 3.0
bottom_radius = 4.0
height = 0.002

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ub3u"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_e183p"]
material = SubResource("StandardMaterial3D_0ub3u")
size = Vector2(50, 10)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2l12r"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_1ele2"]
material = SubResource("StandardMaterial3D_2l12r")
size = Vector2(2, 32)
center_offset = Vector3(0, 0.001, 15)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wajhj"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_s7hxx"]
material = SubResource("StandardMaterial3D_wajhj")
size = Vector2(32, 2)
center_offset = Vector3(15, 0.001, 0)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_phlfu"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_hc8md"]
material = SubResource("StandardMaterial3D_phlfu")
size = Vector2(32, 2)
center_offset = Vector3(15, 0.001, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_27klc"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_qubo7"]
material = SubResource("StandardMaterial3D_27klc")
size = Vector2(2, 32)
center_offset = Vector3(30, 0.001, 15)
orientation = 1

[sub_resource type="ArrayMesh" id="ArrayMesh_whjik"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n67bh"]

[sub_resource type="BoxMesh" id="BoxMesh_v6v7y"]
material = SubResource("StandardMaterial3D_n67bh")
size = Vector3(0.5, 0.01, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_twceg"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7m2dq"]
material = SubResource("StandardMaterial3D_twceg")
size = Vector3(0.03, 0.6, 0.001)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2e5l4"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yxmap"]
material = SubResource("StandardMaterial3D_2e5l4")
size = Vector3(0.5, 0.03, 0.001)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y7r17"]
albedo_color = Color(0.396078, 0.388235, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_8r3k2"]
material = SubResource("StandardMaterial3D_y7r17")
top_radius = 3.0
bottom_radius = 4.0
height = 0.003

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2xu1d"]

[sub_resource type="QuadMesh" id="QuadMesh_5r354"]
material = SubResource("StandardMaterial3D_2xu1d")
size = Vector2(0.2, 1)
orientation = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4sot4"]
sky_top_color = Color(0.502941, 0.808117, 0.92521, 1)
sky_horizon_color = Color(0.34483, 0.706547, 0.84805, 1)

[sub_resource type="Sky" id="Sky_7b5f2"]
sky_material = SubResource("ProceduralSkyMaterial_4sot4")

[sub_resource type="Environment" id="Environment_k40ms"]
background_mode = 2
background_color = Color(0.610982, 1, 0.916553, 1)
sky = SubResource("Sky_7b5f2")

[node name="Field3D" type="Node3D"]
script = ExtResource("1_pctx6")
metadata/movie_file = "videos/demos/demo_3D_2024-10-06.avi"

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
shape = SubResource("BoxShape3D_yxhqg")

[node name="GreenGround" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70, -1, 70)
mesh = SubResource("BoxMesh_i5ps3")

[node name="HomePlate" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.175, 0.01, 0.175)
mesh = SubResource("BoxMesh_s3y8d")
skeleton = NodePath("../GreenGround")

[node name="FirstBase" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.75, 0.01, 0.25)
mesh = SubResource("BoxMesh_ehdc6")
skeleton = NodePath("../GreenGround")

[node name="SecondBase" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0.01, 30)
mesh = SubResource("BoxMesh_ehdc6")
skeleton = NodePath("../GreenGround")

[node name="ThirdBase" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.01, 29.75)
mesh = SubResource("BoxMesh_ehdc6")
skeleton = NodePath("../GreenGround")

[node name="WallCenter" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 70, 0, 70)
visible = false
mesh = SubResource("BoxMesh_j3njs")
skeleton = NodePath("../..")

[node name="FoulLineRight" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("QuadMesh_m8866")

[node name="FoulLineLeft" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("QuadMesh_mt18i")

[node name="DirtHome" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0.4)
mesh = SubResource("CylinderMesh_rjcmf")

[node name="WallLeft" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 100, 0, 0)
visible = false
mesh = SubResource("QuadMesh_e183p")
skeleton = NodePath("../../Headon")

[node name="DirtHomeToFirst" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("QuadMesh_1ele2")

[node name="DirtThirdToHome" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("QuadMesh_s7hxx")

[node name="DirtFirstToSecond" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_hc8md")

[node name="DirtSecondToThird" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("QuadMesh_qubo7")

[node name="testarraymeshdelete" type="MeshInstance3D" parent="Ground"]
visible = false
mesh = SubResource("ArrayMesh_whjik")

[node name="Wall" parent="Ground" instance=ExtResource("2_hfxba")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -5.96046e-08, 1, 0, -1, -5.96046e-08, 0, 3, 0)
shadow_enabled = true

[node name="Headon" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="HomePlate2" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0.6)
mesh = SubResource("BoxMesh_v6v7y")
skeleton = NodePath("../../Ground/GreenGround")

[node name="Batter3D" parent="Headon" instance=ExtResource("1_f3rg8")]
transform = Transform3D(-1, 2.10734e-08, 1.49012e-07, -7.8232e-09, 1, 2.98023e-08, 0, 2.10734e-08, -1, 1, 0, 0.5)

[node name="CameraPivot" type="Marker3D" parent="Headon"]
transform = Transform3D(-1, -1.21669e-08, 8.6572e-08, 0, 0.990268, 0.139173, -8.74228e-08, 0.139173, -0.990268, 0, 0, 0)
visible = false

[node name="Pitcher3D" parent="Headon" instance=ExtResource("2_57wgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)

[node name="StrikeZoneLeft" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.75, 0.6)
mesh = SubResource("BoxMesh_7m2dq")

[node name="StrikeZoneRight" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.75, 0.6)
mesh = SubResource("BoxMesh_7m2dq")

[node name="StrikeZoneTop" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0.6)
mesh = SubResource("BoxMesh_yxmap")

[node name="StrikeZoneBottom" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0.6)
mesh = SubResource("BoxMesh_yxmap")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Headon"]
transform = Transform3D(1, 0, 0, 0, -0.25038, 0.968148, 0, -0.968148, -0.25038, 0, 10, -10)

[node name="Mound" type="MeshInstance3D" parent="Headon"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, -0.001, 20)
mesh = SubResource("CylinderMesh_8r3k2")
skeleton = NodePath("../../Ground")

[node name="MoundRubber" type="MeshInstance3D" parent="Headon/Mound"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 0, 0.005, 0)
mesh = SubResource("QuadMesh_5r354")

[node name="Defense" type="Node3D" parent="Headon"]

[node name="Fielder3D2B" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 42)
posname = "2B"

[node name="Fielder3D1B" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 29)
posname = "1B"

[node name="Fielder3D3B" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 29)
posname = "3B"

[node name="Fielder3DSS" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 42)
posname = "SS"

[node name="Fielder3DCF" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 70)
posname = "CF"

[node name="Fielder3DLF" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 60)
posname = "LF"

[node name="Fielder3DRF" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 60)
posname = "RF"

[node name="Fielder3DP" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
visible = false
posname = "P"

[node name="Fielder3DC" parent="Headon/Defense" groups=["fielders"] instance=ExtResource("4_386e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
visible = false
posname = "C"

[node name="CatchersMitt" parent="Headon" instance=ExtResource("5_kcgmt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.6)

[node name="Bat3D" parent="Headon" instance=ExtResource("6_i5fsa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.6)

[node name="Camera3DCustom" parent="Headon" instance=ExtResource("9_hy03x")]

[node name="Cameras" type="Node3D" parent="Headon"]

[node name="Camera3DHighHome" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-1, -7.45058e-09, 5.96046e-08, 0, 0.984808, 0.173648, -8.9407e-08, 0.173648, -0.984808, 0, 10, -35)
environment = ExtResource("10_t8ph7")
fov = 18.9

[node name="Camera3DHigherHome" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-1, -7.45058e-09, 5.96046e-08, 0, 0.984808, 0.173648, -8.9407e-08, 0.173648, -0.984808, 0, 15, -60)
environment = ExtResource("10_t8ph7")
fov = 18.9

[node name="Camera3DAll22" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-1, 7.45058e-09, -5.96046e-08, 0, 0.984808, 0.173648, 8.9407e-08, 0.173648, -0.984808, 0, 20, -100)
environment = ExtResource("10_t8ph7")
fov = 18.9

[node name="Camera3DOverhead" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 200, 65)
environment = ExtResource("10_t8ph7")
fov = 39.2

[node name="Camera3DPitcherShoulderRight" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(0.992546, 0.00425317, -0.121795, 0, 0.999391, 0.0348995, 0.121869, -0.0346394, 0.991941, -5, 2, 50)
environment = ExtResource("10_t8ph7")
fov = 5.7

[node name="Camera3DBatting" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-1, 5.58794e-09, -8.9407e-08, 0, 0.99863, 0.052336, 8.9407e-08, 0.052336, -0.998629, 0, 1.5, -10)
environment = SubResource("Environment_k40ms")
current = true
fov = 12.0

[node name="Camera3DPitchSideView" type="Camera3D" parent="Headon/Cameras"]
transform = Transform3D(-4.37114e-08, 0.173648, -0.984808, 0, 0.984808, 0.173648, 1, 7.5904e-09, -4.30473e-08, -22, 3, 11)
fov = 37.7

[node name="Ball3D" parent="Headon" groups=["ball"] instance=ExtResource("11_faris")]
visible = false

[node name="MouseGroundLocation" parent="Headon" instance=ExtResource("12_ah4ma")]
visible = false

[node name="MeshInstance3DAnnulus" parent="Headon" instance=ExtResource("13_rbd7b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.002, 0)
inner_radius = 1.0
outer_radius = 1.2
color = Color(1.34766e-05, 0.888755, 0.933133, 1)

[node name="Runners" type="Node3D" parent="Headon"]

[node name="Runner3DHome" parent="Headon/Runners" instance=ExtResource("8_eblru")]
visible = false

[node name="Runner3D1B" parent="Headon/Runners" instance=ExtResource("8_eblru")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, 21)
start_base = 1

[node name="Runner3D2B" parent="Headon/Runners" instance=ExtResource("8_eblru")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40)
start_base = 2

[node name="Runner3D3B" parent="Headon/Runners" instance=ExtResource("8_eblru")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 21)
start_base = 3

[node name="TimerCameraChange" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Home run!"

[node name="FlashText" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -390.0
offset_top = -129.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 2
script = ExtResource("14_g2qjr")

[node name="Timer" type="Timer" parent="FlashText"]

[connection signal="start_runner" from="Headon/Batter3D" to="." method="_on_batter_3d_start_runner"]
[connection signal="pitch_started" from="Headon/Pitcher3D" to="." method="_on_pitcher_3d_pitch_started2"]
[connection signal="pitch_started" from="Headon/Pitcher3D" to="." method="_on_pitcher_3d_pitch_started"]
[connection signal="ball_overthrown" from="Headon/Ball3D" to="." method="_on_ball_3d_ball_overthrown"]
[connection signal="timeout" from="TimerCameraChange" to="." method="_on_timer_camera_change_timeout"]
[connection signal="timeout" from="FlashText/Timer" to="FlashText" method="_on_timer_timeout"]
